--- a/bar/90_contents/arrow_from_role.html
+++ b/bar/90_contents/arrow_from_role.html
@@ -35,8 +35,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/message.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/arrow_from_role.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
 
     <title>Personium</title>
@@ -45,60 +44,34 @@
 <body>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+        <a class="header-btn pn-back-btn pn-btn" href="links_02.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メッセージ</span>
+        <span>この人に許可した役割</span>
     </header>
 
     <main>
-        <!--user account infomation-->
         <div class="bg-gray">
-            <div id="links">
-                <ul class="hover-action">
-                    <li>
-                        <a href="incoming_message_list.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-envelope msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>受信メッセージ</span>
-                                    <span class="pn-list-batch msg-list-batch">
-                                        <span id="receiveCnt"></span>
-                                    </span>
-                                </div>
+            <div class="extcell-profile">
+                <div class="role-img-area">
+                    <div class="arrow-to-img">
+                        <div class="user-icon user-icon-large"></div>
+                        <div class="font-weight-bold"></div>
+                    </div>
+                    <div class="arrow-to-img">
+                        <i class="fas fa-caret-right fa-3x"></i>
+                    </div>
+                    <div class="arrow-to-img">
+                        <div class="user-icon user-icon-large"></div>
+                        <div class="font-weight-bold"></div>
+                    </div>
+                </div>
 
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="outgoing_message_list.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-paper-plane msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>送信済メッセージ</span>
-                                </div>
+                <div class="user-description">あなたがこの人に許可している役割です。</div>
+            </div>
 
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="create_message.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="fas fa-pencil-alt msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>メッセージ作成</span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                </ul>
+            <div class="app-and-service">
+                
             </div>
         </div>
     </main>
