--- a/bar/90_contents/login.html
+++ b/bar/90_contents/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -16,9 +16,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/login.js"></script>
+  <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
+  <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
+  <script src="https://demo.personium.io/app-cc-home/__/src/js/login.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
   <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
