--- a/box-resources-demo/login.html
+++ b/box-resources-demo/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/login.js"></script>
+  <script src="../appcell-resources/js/login.js"></script>
   <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
