--- a/bar/90_contents/application_management.html
+++ b/bar/90_contents/application_management.html
@@ -1,6 +1,9 @@
 ﻿<!DOCTYPE html>
+
 <html>
+
 <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,10 +16,6 @@
     <!--     Fonts and icons     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
 
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
@@ -25,32 +24,62 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/bootstrap-switch/bootstrap-switch.min.js"></script>
-
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common_old.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/applicationmarket.js"></script>
     <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
-    <title>Personium Cell</title>
+
+    <title>
+        Personium Cell
+    </title>
 </head>
+
 <body>
-    <div class="mySpinner">
-        <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-        <span class="sr-only">Loading...</span>
-    </div>
-    <div class="myHiddenDiv">
-        <div class="container-fluid display-table">
-            <div class="row display-parent-div" id="displayParentDiv">
-                <div class="col-md-12 col-sm-12 display-table-cell v-align">
-                    <div class="row header-menu">
-                    </div>
-                    <div class="row user-dashboard" id="dashboard">
-                    </div>
+    <div class="col-md-12 col-sm-12 display-table-cell v-align setting-menu slide-on">
+        <div class="row header-menu setting-header">
+            <div class="col-xs-1" id="settingBackMenu">
+                <a href="#" class="allToggle prev-icon" style="float:left;" onclick="cm.moveBackahead(true);return false;">
+                    <img id="imSettingBack" src="https://demo.personium.io/HomeApplication/__/icons/ico_back.png" alt="user">
+                </a>
+            </div>
+            <div class="col-xs-2">
+                <table class="table-fixed back-title">
+                    <tbody>
+                        <tr style="vertical-align: middle;">
+                            <td class="ellipsisText" id="settingBackTitle" align="left"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-xs-6 text-center title" id="settingTitleMenu">
+                <h4 class="ellipsisText" data-i18n="Application">
+                    アプリ管理
+                </h4>
+            </div>
+            <div class="col-xs-3 text-right">
+            </div>
+        </div>
+        <div class="row" id="settingboard" style="height:100%;">
+            <div style="height:100%;overflow:auto;padding-bottom:85px;" class="list-group panel-default" id="setting-panel1">
+                <div class="panel-body">
+                    <ul class="list menu-list">
+                        <li>
+                            <a href="#" class="list-group-item disabled" onclick="st.openAppliDelPanel(); return false;" data-i18n="ApplicationDelete">
+                                アプリ削除
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="list-group-item" onclick="st.openBoxInstall(); return false;" data-i18n="BoxInstall">
+                                Box インストール
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
 </body>
 </html>
+
