--- a/bar/90_contents/create_message.html
+++ b/bar/90_contents/create_message.html
@@ -17,6 +17,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
@@ -35,75 +36,53 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/message.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/create_msg.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
 
     <title>Personium</title>
 </head>
 
 <body>
+    <div class="modal fade double-btn-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog pn-modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body pn-modal-body" data-i18n="confirmSendMessage">
 
-    <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
-            <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
-        </a>
-        <span>メッセージ</span>
-    </header>
-
-    <main>
-        <!--user account infomation-->
-        <div class="bg-gray">
-            <div id="links">
-                <ul class="hover-action">
-                    <li>
-                        <a href="incoming_message_list.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-envelope msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>受信メッセージ</span>
-                                    <span class="pn-list-batch msg-list-batch">
-                                        <span id="receiveCnt"></span>
-                                    </span>
-                                </div>
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="outgoing_message_list.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-paper-plane msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>送信済メッセージ</span>
-                                </div>
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="create_message.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="fas fa-pencil-alt msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>メッセージ作成</span>
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                </ul>
+                </div>
+                <div class="modal-footer pn-modal-footer">
+                    <button type="button" class="btn" data-dismiss="modal" data-i18n="Cancel"></button>
+                    <button type="button" class="btn ok-btn">OK</button>
+                </div>
             </div>
         </div>
+    </div>
+
+    <header>
+        <a class="header-btn pn-back-btn pn-btn" href="message.html">
+            <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
+        </a>
+        <span>メッセージ作成</span>
+        <button class="slide-list-edit-btn header-btn header-btn-right pn-btn send-icon disable">
+            <i class="fas fa-paper-plane fa-2x header-ic-03"></i>
+        </button>
+    </header>
+
+    <main class="incoming_msg">
+        <div class="pn-list to-address">
+            <div class="to-user-info-area">宛先</div>
+
+            <div class="to-user-info-area to-address-info">
+                
+            </div>
+            <button id="add-to-account" class="pn-btn add-circle-btn">
+                <i class="fas fa-plus-circle fa-2x user-icon-xs"></i>
+            </button>
+        </div>
+        <textarea class="form-control pn-textarea create-title create-msg-ta" placeholder="件名"></textarea>
+        <textarea class="form-control pn-textarea create-msg create-msg-ta" rows="3" placeholder="本文"></textarea>
+
+
     </main>
-    <footer>
-    </footer>
 </body>
 
 </html>
