--- a/bar/90_contents/edit_account.html
+++ b/bar/90_contents/edit_account.html
@@ -35,8 +35,7 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/message.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/edit_account.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
 
     <title>Personium</title>
@@ -45,64 +44,60 @@
 <body>
 
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+        <a class="header-btn pn-back-btn pn-btn" href="account.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メッセージ</span>
+        <span>アカウント編集</span>
     </header>
 
     <main>
-        <!--user account infomation-->
         <div class="bg-gray">
             <div id="links">
-                <ul class="hover-action">
+                <ul>
                     <li>
-                        <a href="incoming_message_list.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-envelope msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>受信メッセージ</span>
-                                    <span class="pn-list-batch msg-list-batch">
-                                        <span id="receiveCnt"></span>
-                                    </span>
-                                </div>
-
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text form-title form-no-border">名前</span>
                             </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="outgoing_message_list.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-paper-plane msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>送信済メッセージ</span>
-                                </div>
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="create_message.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="fas fa-pencil-alt msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>メッセージ作成</span>
-                                </div>
-                            </div>
-                        </a>
+                            <input id="editAccountName" type="text" class="form-control account-form form-no-border" placeholder="アカウント名を入力" aria-describedby="basic-addon3">
+                        </div>
+                        <span class="popupAlertArea" style="color:red">
+                            <aside id="popupEditAccountNameErrorMsg"> </aside>
+                        </span>
                     </li>
 
+                    <li>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text form-title form-no-border">パスワード</span>
+                            </div>
+                            <input id="editNewPassword" type="password" class="form-control account-form form-no-border" placeholder="半角英数 6～23文字" aria-describedby="basic-addon3">
+                        </div>
+                        <span class="popupAlertArea" style="color:red">
+                            <aside id="editChangeMessage"> </aside>
+                        </span>
+                    </li>
+
+                    <li>
+                        <div class="input-group">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text form-title form-no-border">確認</span>
+                            </div>
+                            <input id="editConfirmPassword" type="password" class="form-control account-form form-no-border" placeholder="パスワードを再入力" aria-describedby="basic-addon3">
+                        </div>
+                        <span class="popupAlertArea" style="color:red">
+                            <aside id="editConfirmMessage"> </aside>
+                        </span>
+                    </li>
                 </ul>
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="account-info-footer">
+        <div class="edit-list footer-btn-area">
+            <button type="button" class="btn btn-secondary footer-btn" onclick="location.href='account.html'">キャンセル</button>
+            <button type="button" class="btn btn-primary footer-btn font-weight-bold" onclick="edit_account.editAccount();">編集</button>
+        </div>
     </footer>
 </body>
 
