--- a/bar/90_contents/main.html
+++ b/bar/90_contents/main.html
@@ -1,67 +1,164 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Personium Cell</title>
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
-  <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/load.i18n.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/utils.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/common.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/main.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/settings.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/demo.js"></script>
-  <script src="https://demo.personium.io/HomeApplication/__/appcell-resources/js/bootstrap-switch/bootstrap-switch.min.js"></script>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Raleway:400,200' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/common.css' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/settings.css' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/bootstrap-switch/bootstrap-switch.min.css' rel='stylesheet' type='text/css'>
-  <link href='https://demo.personium.io/HomeApplication/__/appcell-resources/css/main.css' rel='stylesheet' type='text/css'>
-  <!--     Fonts and icons     -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" />
-  <script type="text/javascript">
-    function init() {
-      ha.init();
-    };
-</script>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+﻿<!doctype html>
+<html lang="ja">
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/personium.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/homeapp.css">
+    <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/common.css">
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
+    <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script>
+        FontAwesomeConfig = {
+            searchPseudoElements: true
+        };
+    </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/main.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
+
+    <title>Personium</title>
 </head>
+
 <body>
-  <div class="mySpinner">
-    <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-    <span class="sr-only">Loading...</span>
-  </div>
-  <div class="myHiddenDiv">
-    <div class="display-parent-div" id="displayParentDiv">
-      <!--<header>-->
-      <header class="profile-menu">
-      </header>
-      <!--</header>-->
-      <section class="dashboard-block" id="main-menu">
-          <h2>MENU</h2>
-          <div class="user-dashboard" id="dashboard">
-          </div>
-      </section>
-      <section class="dashboard-block" id="main-myService">
-          <h2>MY SERVICES</h2>
-          <div class="user-dashboard" id="dashboard_ins">
-          </div>
-      </section>
-      <a id="info-readmore"><span data-i18n="Dummy.More">More</span></a>
+    <div class="modal fade double-btn-modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog pn-modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body pn-modal-body">
+                    ログアウトしますか？
+                </div>
+                <div class="modal-footer pn-modal-footer">
+                    <button type="button" class="btn" data-dismiss="modal">キャンセル</button>
+                    <button type="button" class="btn ok-btn" onclick="cm.logout();">OK</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+    <div id="drawer">
+        <div id="menu-background">
+            <div id="drawer_menu">
+                <ul>
+                    <li class="menu-list">
+                        <a href="profile.html">プロフィール編集</a>
+                    </li>
+                    <li class="menu-list">
+                        <a href="#">パスワード変更</a>
+                    </li>
+                    <li class="menu-list">
+                        <a href="account.html">アカウント</a>
+                    </li>
+                    <li class="menu-list">
+                        <a href="#">アプリ管理</a>
+                    </li>
+                    <li class="menu-list">
+                        <a href="#">言語</a>
+                    </li>
+                    <li id="logout" class="menu-list">
+                        <a href="#">ログアウト</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <header>
+        <button id="drawer_btn" class="header-btn pn-btn">
+            <i class="fas fa-bars fa-2x header-ic-02"></i>
+        </button>
+        Personium
+    </header>
+
+    <main>
+        <!--user account infomation-->
+        <div class="user-account">
+            <div class="my_icon user-icon user-icon-small">
+            </div>
+            <div class="account-info">
+                <div class="user-name"></div>
+                <div>
+                    <span>アカウント:</span>
+                    <span class="account"></span>
+                </div>
+            </div>
+        </div>
+
+        <!--menu-->
+        <div class="menu">
+            <a href="links.html">
+                <div class="links">
+                    <svg class="menu-ic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <title>ic_links</title>
+                        <path d="M25.94,13.63h0l-.43-.12A6.79,6.79,0,0,0,15,5a.25.25,0,0,0,.08.41,8.91,8.91,0,0,1,1.63.84.25.25,0,0,0,.29,0,4.49,4.49,0,0,1,2.78-1A4.53,4.53,0,0,1,21,14.2a.25.25,0,0,0-.19.22,9.18,9.18,0,0,1-.32,1.82.25.25,0,0,0,.05.23.26.26,0,0,0,.22.08,6.79,6.79,0,0,0,3-1.21l1.56.44a2.46,2.46,0,0,1,1.78,2.35v.93a.83.83,0,0,1-.83.83H23.47a.25.25,0,0,0-.23.35,6.94,6.94,0,0,1,.52,1.68.25.25,0,0,0,.25.21h2.26a3.08,3.08,0,0,0,3.07-3.07v-.93A4.68,4.68,0,0,0,25.94,13.63Z"
+                        />
+                        <path d="M18.6,18.07h0L18,17.9a7.45,7.45,0,1,0-12.43,0L5,18.07A5.11,5.11,0,0,0,1.29,23v1a3.33,3.33,0,0,0,3.33,3.33H19A3.33,3.33,0,0,0,22.31,24V23A5.11,5.11,0,0,0,18.6,18.07Zm-6.78.82a5.12,5.12,0,1,1,5.12-5.12A5.12,5.12,0,0,1,11.82,18.89Zm4.38.92,1.76.5A2.8,2.8,0,0,1,20,23v1a1,1,0,0,1-1,1H4.62a1,1,0,0,1-1-1V23a2.8,2.8,0,0,1,2-2.68l1.76-.5a7.45,7.45,0,0,0,8.78,0Z"
+                        />
+                    </svg>
+                    <div>つながり</div>
+                </div>
+            </a>
+
+            <a href="./applicationmarket.html">
+                <div class="app-market">
+                    <svg class="menu-ic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <title>ic_app_market</title>
+                        <path d="M26.49,6.78a2.3,2.3,0,0,0-1.8-.87H14.31a1.26,1.26,0,0,0,0,2.52H24.43l-.6,2.68H14.31a1.26,1.26,0,1,0,0,2.52h9l-.7,3.15-12,.07L8.82,5.94A2.3,2.3,0,0,0,6.54,4H3.26a1.26,1.26,0,0,0,0,2.52h3.1L8.12,17.44a2.3,2.3,0,0,0,2.28,1.94h0l12.33-.07A2.3,2.3,0,0,0,25,17.5l2-8.78A2.3,2.3,0,0,0,26.49,6.78Z"
+                        />
+                        <path d="M21.26,20.24a3.3,3.3,0,0,0,0,6.59h.11a3.3,3.3,0,0,0-.11-6.59Zm.11,4.45h-.11a1.15,1.15,0,1,1,1.21-1.1A1.1,1.1,0,0,1,21.38,24.69Z"
+                        />
+                        <path d="M10.95,20.24a3.3,3.3,0,0,0,0,6.59h.11a3.3,3.3,0,0,0-.11-6.59Zm.11,4.45h-.11a1.15,1.15,0,1,1,1.21-1.1A1.1,1.1,0,0,1,11.06,24.69Z"
+                        />
+                    </svg>
+                    <div>Appマーケット</div>
+                </div>
+            </a>
+
+            <a href="message.html">
+                <div class="message">
+                    <svg class="menu-ic" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <title>ic_message</title>
+                        <path d="M25.56,5H4.44A2.44,2.44,0,0,0,2,7.44V22.06A2.44,2.44,0,0,0,4.44,24.5H25.56A2.44,2.44,0,0,0,28,22.06V7.44A2.44,2.44,0,0,0,25.56,5Zm0,2.44V9.51c-1.14.93-3,2.37-6.83,5.41-.86.67-2.55,2.29-3.73,2.27s-2.87-1.6-3.73-2.27c-3.88-3-5.7-4.48-6.83-5.41V7.44ZM4.44,22.06V12.64c1.16.93,2.81,2.23,5.33,4.2,1.11.87,3.05,2.8,5.23,2.79s4.09-1.89,5.23-2.79c2.52-2,4.17-3.27,5.33-4.2v9.43Z"
+                        />
+                    </svg>
+                    <div>メッセージ</div>
+                </div>
+            </a>
+
+        </div>
+
+        <!--application & service-->
+        <div class="app-and-service">
+            <div class="title">アプリ・サービス</div>
+            <div class="app-list">
+                
+            </div>
+        </div>
+    </main>
+
+    <footer>
+    </footer>
 </body>
+
 </html>
