--- a/bar/90_contents/select_accounttype.html
+++ b/bar/90_contents/select_accounttype.html
@@ -1,31 +1,29 @@
 ﻿<!doctype html>
 <html lang="ja">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
+          crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/personium.css">
     <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/homeapp.css">
     <link rel="stylesheet" href="https://demo.personium.io/app-cc-home/__/src/css/common.css">
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.19.3/moment-with-locales.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.4.3/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-xhr-backend/i18nextXHRBackend.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next-browser-languagedetector/2.0.0/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>
     <script>
         FontAwesomeConfig = {
             searchPseudoElements: true
@@ -35,75 +33,45 @@
     <script src="https://demo.personium.io/app-cc-home/__/src/js/utils.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/personium.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/common.js"></script>
-    <script src="https://demo.personium.io/app-cc-home/__/src/js/message.js"></script>
+    <script src="https://demo.personium.io/app-cc-home/__/src/js/select_accounttype.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/settings.js"></script>
     <script src="https://demo.personium.io/app-cc-home/__/src/js/load.i18n.js"></script>
-
     <title>Personium</title>
 </head>
-
 <body>
-
     <header>
-        <a class="header-btn pn-back-btn pn-btn" href="main.html">
+        <a class="header-btn pn-back-btn pn-btn" href="account.html">
             <i id="back_btn" class="fas fa-angle-left fa-2x header-ic-01"></i>
         </a>
-        <span>メッセージ</span>
+        <span>アカウント種別を選択</span>
     </header>
-
     <main>
         <!--user account infomation-->
         <div class="bg-gray">
-            <div id="links">
+            <div id="roles">
                 <ul class="hover-action">
                     <li>
-                        <a href="incoming_message_list.html">
+                        <a href="#" onclick="sel_accType.dispPasswordAccount();">
                             <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-envelope msg-list-icon"></i>
+                                <div class="account-info">
+                                    <span class="user-name" data-i18n="authType.basic"></span>
                                 </div>
-                                <div class="msg-menu-text">
-                                    <span>受信メッセージ</span>
-                                    <span class="pn-list-batch msg-list-batch">
-                                        <span id="receiveCnt"></span>
-                                    </span>
-                                </div>
-
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="outgoing_message_list.html">
+                        <a href="#" onclick="sel_accType.dispGoogleAccount();">
                             <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="far fa-paper-plane msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>送信済メッセージ</span>
-                                </div>
-
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="create_message.html">
-                            <div class="pn-list">
-                                <div class="pn-list-icon-02">
-                                    <i class="fas fa-pencil-alt msg-list-icon"></i>
-                                </div>
-                                <div class="msg-menu-text">
-                                    <span>メッセージ作成</span>
+                                <div class="account-info">
+                                    <span class="user-name" data-i18n="authType.google">Google</span>
                                 </div>
                             </div>
                         </a>
                     </li>
-
                 </ul>
             </div>
         </div>
     </main>
-    <footer>
-    </footer>
+    <footer></footer>
 </body>
-
 </html>
